language/move-lang/tests/move_check/typing/if_condition_invalid.exp
error: 

   ┌── tests/move_check/typing/if_condition_invalid.move:3:13 ───
   │
 3 │         if (()) () else ();
   │             -- The type: '()'
   │             -- Is not compatible with: 'bool'
   │             ^^ Invalid if condition
   │

error: 

   ┌── tests/move_check/typing/if_condition_invalid.move:4:13 ───
   │
 4 │         if ((())) () else ();
   │             ---- The type: '()'
   │             ---- Is not compatible with: 'bool'
   │             ^^^^ Invalid if condition
   │

error: 

   ┌── tests/move_check/typing/if_condition_invalid.move:5:13 ───
   │
 5 │         if ({}) () else ()
   │             -- The type: '()'
   │             -- Is not compatible with: 'bool'
   │             ^^ Invalid if condition
   │

error: 

   ┌── tests/move_check/typing/if_condition_invalid.move:8:28 ───
   │
 8 │     fun t1<T: copyable>(x: T) {
   │                            - The type: 'T'
 9 │         if (x) () else ();
   │             - Is not compatible with: 'bool'
   │             ^ Invalid if condition
   │

error: 

    ┌── tests/move_check/typing/if_condition_invalid.move:10:13 ───
    │
 10 │         if (0) () else ();
    │             - The type: integer
    │             - Is not compatible with: 'bool'
    │             ^ Invalid if condition
    │

error: 

    ┌── tests/move_check/typing/if_condition_invalid.move:11:13 ───
    │
 11 │         if (0x0) () else ()
    │             --- The type: 'address'
    │             --- Is not compatible with: 'bool'
    │             ^^^ Invalid if condition
    │

error: 

    ┌── tests/move_check/typing/if_condition_invalid.move:15:13 ───
    │
 15 │         if ((false, true)) () else ();
    │             ------------- The type: '(bool, bool)'
    │             ------------- Is not compatible with: 'bool'
    │             ^^^^^^^^^^^^^ Invalid if condition
    │

error: 

    ┌── tests/move_check/typing/if_condition_invalid.move:16:13 ───
    │
 16 │         if ((0, false)) () else ()
    │             ---------- The type: '({integer}, bool)'
    │             ---------- Is not compatible with: 'bool'
    │             ^^^^^^^^^^ Invalid if condition
    │

